--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -620,6 +620,7 @@ knitr::kable(race[    c('race1', 'decode','count','countPct')],
             col.names = c("Value","Label","Frequency","Percent"), 
             row.names=FALSE, 
             format.args = list(big.mark = ","))
+```
 
 ## Table 6.2. Race Distribution: Race2
 
@@ -2096,7 +2097,7 @@ knitr::kable(tab7.11_combined[    c('year', 'rowCnt','tab7.11_totalCnt.rowCnt','
   
 ## Figure 1. Percent of Patients with Unknown Race1 and Hispanic Values by Year
 
-```{r tab7.11_fig, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r tab7.11_fig, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 
 ggplot(data = tab7.11_combined, aes(x = year, y = rowPct, group=1)) + geom_line() + geom_point() + ylab("Percent") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
@@ -2323,7 +2324,7 @@ Percentages are calculated with all patients within the calendar year as the den
 
 ## Figure 2. Count of Distinct Patients by Age Group and Year of Utilization
 
-```{r fig2, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r fig2, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(data = encPersonAgeYear, aes(x =aYear, y = Freq, fill = ageCat)) + 
   geom_bar(stat = "identity") + labs(y='Count', x='Year', fill='Age at encounter')+theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
   scale_y_continuous(labels = function(x) format(x, big.mark = ",", scientific = FALSE))
@@ -2447,14 +2448,14 @@ encTypeBymonYr <- within(encTypeBymonYr,{decode <- ifelse(!is.na(decode),decode,
 
 ## Figure 3a. Ambulatory Encounters by Year and Month
 
-```{r fig3a, echo = F, include=T, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r fig3a, echo = F, include=T, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(subset(encTypeBymonYr,encType == 'AV'), aes(adate_YM, rowCnt)) + geom_line() +
   scale_x_date(date_labels = "%b %y",date_breaks='1 year') + xlab("Month of encounter") + ylab("Frequency")+theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ## Figure 3b. Other Encounter Types by Year and Month
 
-```{r fig3b, echo = F, include=T, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r fig3b, echo = F, include=T, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(subset(encTypeBymonYr,encType != 'AV'), aes(adate_YM, rowCnt, colour=decode)) + geom_line() +
   scale_x_date(date_labels = "%b %y",date_breaks='1 year') + xlab("Month of encounter") + ylab("Frequency")+theme(axis.text.x = element_text(angle = 45, hjust = 1))+labs(color='Encounter type')
 #,legend.position="bottom" "
@@ -2744,14 +2745,14 @@ dxByMonEncTp <- within(dxByMonEncTp,{decode <- ifelse(!is.na(decode),decode, ife
 
 ## Figure 4a. Count of Diagnoses by Year and Month in Ambulatory Encounters 
 
-```{r Count of diagnoses by year and month in ambulatory encounters, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r Count of diagnoses by year and month in ambulatory encounters, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(subset(dxByMonEncTp,enctype == 'AV'), aes(monYr, Freq)) + geom_line() +
   scale_x_date(date_labels = "%b %y",date_breaks='1 year') + xlab("Month of encounter") + ylab("Frequency")+theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ## Figure 4b. Count of Diagnoses by Year and Month, other Encounter Types
 
-```{r Count of diagnoses by year and month other encounter types, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r Count of diagnoses by year and month other encounter types, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(subset(dxByMonEncTp,enctype != 'AV'), aes(monYr, Freq, colour=decode)) + geom_line() +
   scale_x_date(date_labels = "%b %y",date_breaks='1 year') + xlab("Month of encounter") + ylab("Frequency")+theme(axis.text.x = element_text(angle = 45, hjust = 1))+labs(color='Encounter type')
 #,legend.position="bottom" "
@@ -2760,7 +2761,7 @@ ggplot(subset(dxByMonEncTp,enctype != 'AV'), aes(monYr, Freq, colour=decode)) + 
 
 ## Examination of the VITAL_SIGNS Table
 
-```{r vital_signs table Table, echo = F, include=T, error=T}
+```{r vital_signs table Table, echo = F, include=T, error=T }
 vitalSumm  <- run_query(
                  paste('SELECT count(*) as rowCnt, COUNT(DISTINCT person_id+CAST(measure_date AS varchar(10))+CAST(measure_time AS varchar(20)) ) as primKeyCnt, count(distinct person_id) as personCnt, min(measure_date) as firstDT, max(measure_date) as lastDT',
                        'FROM  ',vital_signs,
@@ -2782,9 +2783,7 @@ Month and year of last record: **`r format(as.Date(vitalSumm$lastDT),"%B %Y")`**
 
 ```{r vital signs summary, echo = F, include=T, error=T}
 # be sure to include space breaks in any re-design
-#vitalCon <- DBI::dbConnect(odbc::odbc(),.connection_string = connectionString)
 vitalVarSumm <- function(var,label){
-  #vitalCon <- DBI::dbConnect(odbc::odbc(),.connection_string = connectionString)
   vitalCon <- get_connection()
   vitalResult <- sqlQuery(vitalCon,
                  paste0('WITH ranks
@@ -2843,7 +2842,6 @@ vitalVarSumm <- function(var,label){
                  as.is=c(TRUE)
                  )
   odbcClose(vitalCon)
-  #DBI::dbDisconnect(vitalCon)
   return (vitalResult)
 }
 vlst <- do.call('rbind',
@@ -2922,7 +2920,7 @@ kable(tab16_add, col.names = c("Year", "Total Number of Recorded Vitals", "Perce
 
 ## Figure 5. Count of Vital Signs by Year and Month
 
-```{r Count of vital signs by year and month, echo = F, include=T, error=T, fig.height=5, fig.width=6.25}
+```{r Count of vital signs by year and month, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 vitalsByMonYr <- run_query(
                  paste('SELECT year(measure_date) as year, month(measure_date) as month',
                        ', sum(case when ht>0 then 1 else 0 end) as height',
@@ -2960,7 +2958,9 @@ tab17 <-  run_query(
    SUM(CASE WHEN benefit_cat = 'OT' THEN 1 ELSE 0 END) as other_ins,
    SUM(CASE WHEN benefit_cat = 'UN' THEN 1 ELSE 0 END) as unknown_ins,
    SUM(CASE WHEN benefit_cat = 'WC' THEN 1 ELSE 0 END) as work_comp,
-   SUM(CASE WHEN benefit_cat = 'NI' THEN 1 ELSE 0 END) as na
+   SUM(CASE WHEN benefit_cat = 'NI' THEN 1 ELSE 0 END) as na,
+   SUM(CASE WHEN (benefit_cat NOT IN  ('CC', 'CO', 'CP', 'MC', 'MD', 'OG', 'NC', 'OT', 'UN', 'WC', 'NI') OR
+                  benefit_cat is null) THEN 1 ELSE 0 END ) as not_chords_categorized
      from ", benefit, "
        group by year(benefit_date)
        order by year(benefit_date)"))
@@ -2973,18 +2973,40 @@ tab17$medicare = paste0(format(tab17$medicare,big.mark = ",") ,' (',round(tab17$
 tab17$medicaid = paste0(format(tab17$medicaid,big.mark = ",") ,' (',round(tab17$medicaid/tab17$num_rec*100, digits=1),'%)')
 tab17$other_gov = paste0(format(tab17$other_gov,big.mark = ",") ,' (',round(tab17$other_gov/tab17$num_rec*100, digits=1),'%)')
 tab17$no_coverage = paste0(format(tab17$no_coverage,big.mark = ",") ,' (',round(tab17$no_coverage/tab17$num_rec*100, digits=1),'%)')
-tab17$other_ins = paste0(format(tab17$other_ins,big.mark = ",") ,' (',round(tab17$other_ins/tab17$num_rec*100, digits=1),'%)')
+tab17$other_ins = paste0(format(tab17$other_ins,big.mark = ",") ,'\n(',round(tab17$other_ins/tab17$num_rec*100, digits=1),'%)')
 tab17$unknown_ins = paste0(format(tab17$unknown_ins,big.mark = ",") ,' (',round(tab17$unknown_ins/tab17$num_rec*100, digits=1),'%)')
 tab17$work_comp = paste0(format(tab17$work_comp,big.mark = ",") ,' (',round(tab17$work_comp/tab17$num_rec*100, digits=1),'%)')
 tab17$na = paste0(format(tab17$na,big.mark = ",") ,' (',round(tab17$na/tab17$num_rec*100, digits=1),'%)')
-
+tab17$not_chords_categorized = paste0(format(tab17$not_chords_categorized,big.mark = ",") ,' (',round(tab17$not_chords_categorized/tab17$num_rec*100, digits=1),'%)')
 tab17$year <- as.character(tab17$year)
 
 ```
 
 
 ```{r tab17.1, echo = F, include=T, error=T}
-kable(tab17, col.names = c("Year", "Records", "Correctional Care", "Commercial/Private Insurance",  "CHIP", "Medicare", "Medicaid", "Other Govt. Insurance", "No Coverage", "Other Insurance", "Unknown", "Workers Comp", "NA"), align = 'c', format.args = list(big.mark = ","))
+#kable(tab17, col.names = c("Year", "Records", "Correctional Care", "Commercial/Private Insurance",  "CHIP", "Medicare", #"Medicaid", "Other Govt. Insurance", "No Coverage", "Other Insurance", "Unknown", "Workers Comp", "NA", "Not CHORDS #Categorized"), align = 'c', format.args = list(big.mark = ","))
+
+tab17 <- flextable(format(tab17, big.mark=",")) %>% 
+        set_table_properties(layout = "autofit") %>% 
+        set_header_labels(year="Year", 
+                          num_rec="Records", 
+                          correctional_care = "Correctional Care", 
+                          comm_private_insurance = "Commercial or Private Insurance", 
+                          CHIP= "CHIP", 
+                          medicare= "Medicare", 
+                          medicaid ="Medicaid", 
+                          other_gov="Other Govt. Insurance", 
+                          no_coverage="No Coverage", 
+                          other_ins="Other Insurance", 
+                          unknown_ins="Unknown", 
+                          work_comp="Workers Comp", 
+                          na="NA",
+                          not_chords_categorized="Not CHORDS Category") %>%
+        flextable::fontsize(size = 9, part = "all") %>%
+        flextable::align(align = "center", part = "all") %>%
+        border_inner(part = "all", border = fp_border(color = "black", style = "solid"))
+
+knitr::knit_print(tab17)
 ```
 
 
